@@ -1,3 +1,6 @@
+  [Daniele Viganò]
+  * Added support for Ubuntu 16.04 (xenial) packages
+
   [Michele Simionato]
   * Major change to the GmfCalculator API
 
